feat: add dropdown menu header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1144,6 +1144,9 @@ html {
   --dropdown-shadown-color: rgba(200, 200, 200, 0.40);
   --dropdown-arrow-color: brightness(0) saturate(100%) invert(100%) sepia(11%) saturate(0%) hue-rotate(153deg) brightness(102%) contrast(103%);
   --top-menu-border-color: #D2D1D6;
+  --menu-column-hover-color:#0071DC;
+  --main-column-width: 292px;
+  --inner-padding: 30px;
 }
 @media (max-width: 991.98px) {
   html {
@@ -1275,47 +1278,6 @@ html {
   height: 100%;
 }
 
-.top-menu {
-  display: flex;
-  gap: 14px;
-  width: 292px;
-  border-right: 1px solid #D2D1D6;
-}
-.top-menu__icon {
-  position: relative;
-  width: 36px;
-  height: 36px;
-  flex-shrink: 0;
-}
-.top-menu__icon-1 {
-  width: 30px;
-  height: 30px;
-  flex-shrink: 0;
-}
-.top-menu__icon-2 {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 24px;
-  height: 24px;
-}
-.top-menu__content {
-  flex: 1;
-}
-.top-menu__heading {
-  color: var(--text-color);
-  font-weight: 500;
-  line-height: 150%;
-  margin-top: 4px;
-}
-.top-menu__list {
-  margin-top: 19px;
-}
-.top-menu__link a {
-  display: block;
-  padding: 7px 0;
-}
-
 .logo {
   display: flex;
   gap: 14px;
@@ -1354,10 +1316,10 @@ html {
   left: 0;
   padding-top: 69px;
   min-width: min(100%, 1240px);
+  display: none;
 }
 .dropdown__inner {
   position: relative;
-  max-height: min(auto, 582px);
   padding: 30px;
   border-radius: 20px;
   background: var(--dropdown-bg-color);
@@ -1370,6 +1332,90 @@ html {
   left: var(--arrow-left-pos);
   translate: -50%;
   filter: var(--dropdown-arrow-color);
+}
+
+.top-menu {
+  position: relative;
+  display: flex;
+  gap: 14px;
+  --max-inner-height: calc(min(582px, 100vh - 158px) - var(--inner-padding)* 2);
+}
+.top-menu__main {
+  width: var(--main-column-width);
+  height: var(--max-inner-height);
+  border-right: 1px solid var(--top-menu-border-color);
+  overflow-y: auto;
+}
+
+.menu-column + .menu-column {
+  margin-top: 22px;
+}
+.menu-column__icon {
+  position: relative;
+  width: 36px;
+  height: 36px;
+  flex-shrink: 0;
+}
+@media (max-width: 1199.98px) {
+  .menu-column__icon {
+    display: none;
+  }
+}
+.menu-column__icon-1 {
+  width: 30px;
+  height: 30px;
+  flex-shrink: 0;
+}
+.menu-column__icon-2 {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 24px;
+  height: 24px;
+}
+.menu-column__content {
+  flex: 1;
+}
+.menu-column__heading {
+  color: var(--text-color);
+  font-weight: 500;
+  line-height: 150%;
+  margin-top: 4px;
+}
+.menu-column__list {
+  margin-top: 19px;
+}
+.menu-column__link {
+  display: block;
+  padding: 7px 0;
+  font-size: 1.4rem;
+  line-height: 142.857%;
+}
+.menu-column__item:hover > .menu-column__link, .menu-column__item--active:hover > .menu-column__link {
+  color: var(--menu-column-hover-color);
+  font-weight: 500;
+}
+.menu-column__item--active .sub-menu {
+  display: grid;
+}
+
+.sub-menu {
+  position: absolute;
+  display: none;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--inner-padding);
+  padding: 0 var(--inner-padding);
+  inset: 0 0 0 var(--main-column-width);
+  overflow-y: auto;
+}
+.sub-menu--not-main {
+  position: initial;
+  display: grid;
+  inset: initial;
+  grid-template-columns: repeat(4, 1fr);
+  width: 100%;
+  height: var(--max-inner-height);
+  padding-left: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
