--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,9 +78,10 @@ button {
   cursor: pointer;
 }
 
-button, input, select, textarea {
+button, input, select, textarea, img, a {
   font-family: inherit;
   color: inherit;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .icon {
@@ -1118,6 +1119,92 @@ button, input, select, textarea {
     --grid-gutter-y: 90px;
   }
 }
+.d-block {
+  display: block !important;
+}
+
+.d-flex {
+  display: flex !important;
+}
+
+.d-grid {
+  display: grid !important;
+}
+
+.d-none {
+  display: none !important;
+}
+
+@media (max-width: 1399.98px) {
+  .d-xxl-block {
+    display: block !important;
+  }
+  .d-xxl-flex {
+    display: flex !important;
+  }
+  .d-xxl-grid {
+    display: grid !important;
+  }
+  .d-xxl-none {
+    display: none !important;
+  }
+}
+@media (max-width: 1199.98px) {
+  .d-xl-block {
+    display: block !important;
+  }
+  .d-xl-flex {
+    display: flex !important;
+  }
+  .d-xl-grid {
+    display: grid !important;
+  }
+  .d-xl-none {
+    display: none !important;
+  }
+}
+@media (max-width: 991.98px) {
+  .d-lg-block {
+    display: block !important;
+  }
+  .d-lg-flex {
+    display: flex !important;
+  }
+  .d-lg-grid {
+    display: grid !important;
+  }
+  .d-lg-none {
+    display: none !important;
+  }
+}
+@media (max-width: 767.98px) {
+  .d-md-block {
+    display: block !important;
+  }
+  .d-md-flex {
+    display: flex !important;
+  }
+  .d-md-grid {
+    display: grid !important;
+  }
+  .d-md-none {
+    display: none !important;
+  }
+}
+@media (max-width: 575.98px) {
+  .d-sm-block {
+    display: block !important;
+  }
+  .d-sm-flex {
+    display: flex !important;
+  }
+  .d-sm-grid {
+    display: grid !important;
+  }
+  .d-sm-none {
+    display: none !important;
+  }
+}
 html.dark {
   --text-color: #FFFFFF;
   --icon-color: brightness(0) saturate(100%) invert(98%) sepia(94%) saturate(0%) hue-rotate(316deg) brightness(106%) contrast(101%);
@@ -1191,20 +1278,72 @@ html {
 }
 @media (max-width: 991.98px) {
   .navbar {
-    display: none;
+    position: fixed;
+    inset: 0 50% 0 0;
+    background: #fff;
+    margin-left: 0;
+    z-index: 9;
+    padding: 20px 0;
+    translate: -100%;
+    transition: all ease-in 0.25s;
+  }
+  .navbar.show {
+    translate: 0;
+  }
+  .navbar.show ~ .navbar__overlay {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+.navbar__close-button {
+  display: none;
+}
+@media (max-width: 991.98px) {
+  .navbar__close-button {
+    padding: 0 40px;
+    display: block;
+  }
+}
+.navbar__overlay {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity, visibility;
+  transition-duration: 0.5s;
+}
+@media (max-width: 991.98px) {
+  .navbar__overlay {
+    visibility: hidden;
+    opacity: 0;
+    position: fixed;
+    inset: 0;
+    z-index: 8;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+}
+@media (max-width: 991.98px) {
+  .navbar__list {
+    flex-direction: column;
+    align-items: flex-start;
+    overflow-y: auto;
+    height: calc(100% - 30px);
   }
 }
 .navbar__item {
-  padding: 15px;
-}
-.navbar__item:first-child {
-  padding-left: 0;
-}
-.navbar__item:last-child {
-  padding-right: 0;
+  width: 100%;
 }
 .navbar__item:hover .dropdown {
   display: block;
+}
+.navbar__item--active .dropdown {
+  display: block !important;
+}
+@media (max-width: 991.98px) {
+  .navbar__item:hover .dropdown {
+    display: none;
+  }
+  .navbar__item__active .dropdown {
+    display: block !important;
+  }
 }
 .navbar__link {
   gap: 6px;
@@ -1213,9 +1352,26 @@ html {
   font-style: normal;
   font-weight: 500;
   line-height: 146.667%;
+  justify-content: space-between;
+  height: 50px;
+  padding: 0 15px;
+}
+@media (max-width: 991.98px) {
+  .navbar__link {
+    padding: 0 40px;
+  }
+}
+.navbar__item--active .navbar__arrow {
+  transform: rotate(0);
 }
 .navbar__arrow {
   margin-top: 3px;
+  transition-duration: 0.3s;
+}
+@media (max-width: 991.98px) {
+  .navbar__arrow {
+    transform: rotate(-90deg);
+  }
 }
 
 .top-act {
@@ -1226,14 +1382,6 @@ html {
 @media (max-width: 991.98px) {
   .top-act {
     margin-left: 0;
-  }
-}
-.top-act__more {
-  display: block;
-}
-@media (max-width: 991.98px) {
-  .top-act__more {
-    display: block;
   }
 }
 .top-act__group {
@@ -1314,9 +1462,15 @@ html {
 .dropdown {
   position: absolute;
   left: 0;
-  padding-top: 69px;
+  padding-top: 54px;
   min-width: min(100%, 1240px);
   display: none;
+}
+@media (max-width: 991.98px) {
+  .dropdown {
+    position: inherit;
+    padding-top: 0;
+  }
 }
 .dropdown__inner {
   position: relative;
@@ -1333,6 +1487,17 @@ html {
   translate: -50%;
   filter: var(--dropdown-arrow-color);
 }
+@media (max-width: 991.98px) {
+  .dropdown__inner {
+    padding: 0 40px;
+    border-radius: 0;
+    box-shadow: none;
+    background: transparent;
+  }
+  .dropdown__inner::before {
+    content: none;
+  }
+}
 
 .top-menu {
   position: relative;
@@ -1346,7 +1511,23 @@ html {
   border-right: 1px solid var(--top-menu-border-color);
   overflow-y: auto;
 }
+@media (max-width: 991.98px) {
+  .top-menu__main {
+    width: 100%;
+    height: auto;
+    border-right: none;
+  }
+}
 
+.menu-column {
+  display: flex;
+  gap: 14px;
+}
+@media (max-width: 991.98px) {
+  .menu-column {
+    margin-top: 10px;
+  }
+}
 .menu-column + .menu-column {
   margin-top: 22px;
 }
@@ -1359,6 +1540,11 @@ html {
 @media (max-width: 1199.98px) {
   .menu-column__icon {
     display: none;
+  }
+}
+@media (max-width: 991.98px) {
+  .menu-column__icon {
+    display: block;
   }
 }
 .menu-column__icon-1 {
@@ -1382,8 +1568,18 @@ html {
   line-height: 150%;
   margin-top: 4px;
 }
+@media (max-width: 1199.98px) {
+  .menu-column__heading {
+    margin-bottom: 26px;
+  }
+}
 .menu-column__list {
   margin-top: 19px;
+}
+@media (max-width: 1199.98px) {
+  .menu-column__list {
+    margin-top: 0;
+  }
 }
 .menu-column__link {
   display: block;
@@ -1416,6 +1612,19 @@ html {
   width: 100%;
   height: var(--max-inner-height);
   padding-left: 0;
+}
+@media (max-width: 1199.98px) {
+  .sub-menu--not-main {
+    grid-template-columns: repeat(1, 1fr);
+    height: auto;
+  }
+}
+@media (max-width: 1199.98px) {
+  .sub-menu {
+    padding: 0;
+    position: initial;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
