--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -24,9 +24,10 @@ button {
     cursor: pointer;
 }
 
-button, input, select, textarea {
+button, input, select, textarea, img, a {
     font-family: inherit;
     color: inherit;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .icon {
