--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -34,26 +34,81 @@
   }
 
   @include abstracts.breakpoint(lg) {
+    position: fixed;
+    inset: 0 50% 0 0;
+    background: #fff;
+    margin-left: 0;
+    z-index: 9;
+    padding: 20px 0;
+    translate: -100%;
+    transition: all ease-in 0.25s;
+
+    &.show {
+      translate: 0;
+    }
+
+    &.show ~ &__overlay {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  &__close-button {
     display: none;
+
+    @include abstracts.breakpoint(lg) {
+
+      padding: 0 40px;
+      display: block;
+    }
+  }
+
+  &__overlay {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity, visibility;
+    transition-duration: 0.5s;
+
+    @include abstracts.breakpoint(lg) {
+      visibility: hidden;
+      opacity: 0;
+      position: fixed;
+      inset: 0;
+      z-index: 8;
+      background-color: rgba($color: #000, $alpha: 0.4);
+    }
   }
 
   &__list {
     @extend %flexItemsCenter;
+
+    @include abstracts.breakpoint(lg) {
+      flex-direction: column;
+      align-items: flex-start;
+      overflow-y: auto;
+      height: calc(100% - 30px);
+    }
   }
 
   &__item {
-    padding: 15px;
-
-    &:first-child {
-      padding-left: 0;
-    }
-
-    &:last-child {
-      padding-right: 0;
-    }
+    width: 100%;
 
     &:hover .dropdown {
       display: block;
+    }
+
+    &--active .dropdown {
+      display: block !important;
+    }
+
+    @include abstracts.breakpoint(lg) {
+      &:hover .dropdown {
+        display: none;
+      }
+
+      &__active .dropdown {
+        display: block !important;
+      }
     }
   }
 
@@ -65,10 +120,29 @@
     font-style: normal;
     font-weight: 500;
     line-height: 146.667%;
+    justify-content: space-between;
+    height: 50px;
+    padding: 0 15px;
+
+    @include abstracts.breakpoint(lg) {
+      padding: 0 40px;
+      // line-height: 1.5;
+      // font-size: 1.6rem;
+      // justify-content: space-between;
+    }
+  }
+
+  &__item--active &__arrow {
+    transform: rotate(0);
   }
 
   &__arrow {
     margin-top: 3px;
+    transition-duration: 0.3s;
+
+    @include abstracts.breakpoint(lg) {
+      transform: rotate(-90deg);
+    }
   }
 }
 
@@ -79,14 +153,6 @@
 
   @include abstracts.breakpoint(lg) {
     margin-left: 0;
-  }
-
-  &__more {
-    display: block;
-
-    @include abstracts.breakpoint(lg) {
-      display: block;
-    }
   }
 
   &__group {
