--- a/assets/template/header.html
+++ b/assets/template/header.html
@@ -16,6 +16,19 @@
       <button class="navbar__close-button">
         <img src="./assets/icons/arrow-left.svg" alt="" />
       </button>
+
+      <a href="#!" class="nav-btn">
+        <img src="./assets/icons/buy.svg" alt="" class="nav-btn__icon" />
+        <span class="nav-btn__title">Card</span>
+        <span class="nav-btn__qnt">3</span>
+      </a>
+
+      <a href="#!" class="nav-btn">
+        <img src="./assets/icons/heart.svg" alt="" class="nav-btn__icon" />
+        <span class="nav-btn__title">Favourit</span>
+        <span class="nav-btn__qnt">3</span>
+      </a>
+
       <ul class="navbar__list js-dropdown-list">
         <li class="navbar__item">
           <a href="#!" class="navbar__link"
