--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1295,6 +1295,11 @@ html {
     opacity: 1;
   }
 }
+@media (max-width: 575.98px) {
+  .navbar {
+    inset: 0 20% 0 0;
+  }
+}
 .navbar__close-button {
   display: none;
 }
@@ -1302,6 +1307,11 @@ html {
   .navbar__close-button {
     padding: 0 40px;
     display: block;
+  }
+}
+@media (max-width: 575.98px) {
+  .navbar__close-button {
+    padding: 20px;
   }
 }
 .navbar__overlay {
@@ -1361,6 +1371,11 @@ html {
     padding: 0 40px;
   }
 }
+@media (max-width: 575.98px) {
+  .navbar__link {
+    padding: 0 20px;
+  }
+}
 .navbar__item--active .navbar__arrow {
   transform: rotate(0);
 }
@@ -1372,6 +1387,38 @@ html {
   .navbar__arrow {
     transform: rotate(-90deg);
   }
+}
+
+.nav-btn {
+  display: none;
+  height: 2.4rem;
+  padding: 0 40px;
+  height: 50px;
+}
+@media (max-width: 767.98px) {
+  .nav-btn {
+    display: flex;
+    width: 100%;
+    align-items: center;
+  }
+}
+@media (max-width: 575.98px) {
+  .nav-btn {
+    padding: 0 20px;
+  }
+}
+.nav-btn__icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  margin-right: 16px;
+}
+.nav-btn__title {
+  flex: 1;
+}
+.nav-btn__title, .nav-btn__qnt {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 146.667%;
 }
 
 .top-act {
