--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -53,6 +53,10 @@
     }
   }
 
+  @include abstracts.breakpoint(sm) {
+    inset: 0 20% 0 0;
+  }
+
   &__close-button {
     display: none;
 
@@ -60,6 +64,10 @@
 
       padding: 0 40px;
       display: block;
+    }
+
+    @include abstracts.breakpoint(sm) {
+      padding: 20px;
     }
   }
 
@@ -126,9 +134,10 @@
 
     @include abstracts.breakpoint(lg) {
       padding: 0 40px;
-      // line-height: 1.5;
-      // font-size: 1.6rem;
-      // justify-content: space-between;
+    }
+
+    @include abstracts.breakpoint(sm) {
+      padding: 0 20px;
     }
   }
 
@@ -143,6 +152,41 @@
     @include abstracts.breakpoint(lg) {
       transform: rotate(-90deg);
     }
+  }
+}
+
+.nav-btn {
+  display: none;
+  height: 2.4rem;
+  padding: 0 40px;
+  height: 50px;
+
+  @include abstracts.breakpoint(md) {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    
+  }
+
+  @include abstracts.breakpoint(sm) {
+    padding: 0 20px;
+  }
+
+  &__icon {
+    height: 2.4rem;
+    width: 2.4rem;
+    margin-right: 16px;
+  }
+
+  &__title {
+    flex: 1;
+  }
+
+  &__title, 
+  &__qnt {
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 146.667%; 
   }
 }
 
