project card section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,6 +159,8 @@ button {
   border: none;
   outline: none;
   background: transparent;
+  padding: 0;
+  cursor: pointer;
 }
 
 a,
@@ -174,6 +176,10 @@ select {
 
 .icon {
   filter: var(--icon-color);
+}
+
+html {
+  user-select: none;
 }
 
 .row > *, .container-fluid, .container {
@@ -1315,6 +1321,9 @@ html.dark {
       brightness(107%) contrast(96%);
   --sidebar-bg: #292e39;
   --sidebar-shadow: rgba(23, 28, 40, 0.4);
+  --cate-item-bg: #171C28;
+  --cate-item-thumb-bg: #292E39;
+  --cate-item-title-color: #fff;
 }
 @media (max-width: 991.98px) {
   html.dark {
@@ -1336,11 +1345,24 @@ html {
   --top-menu-border-color: #d2d1d6;
   --sidebar-bg: #fff;
   --sidebar-shadow: rgba(200, 200, 200, 0.4);
+  --cate-item-bg: #eee;
+  --cate-item-thumb-bg: #fff;
+  --cate-item-title-color: #000;
+  --filter-btn-color: #6C6C72;
+  --filter-btn-bg: #fff;
+  --like-btn-shadow: 0px 20px 60px rgba(124, 124, 124, 0.20);
+  --product-card-bg: #fff;
+  --product-card-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.20);
 }
 @media (max-width: 991.98px) {
   html {
     --header-bg-color: #fff;
     --header-shadow-color: rgba(237, 237, 246, 0.2);
+  }
+}
+@media (max-width: 767.98px) {
+  html {
+    --cate-item-bg: #fff;
   }
 }
 
@@ -1862,6 +1884,158 @@ html {
 .slideshow__slider::after {
   right: 0;
   translate: 90% -50%;
+}
+
+.filter-button {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  height: 36px;
+  background-color: var(--filter-btn-bg);
+  padding: 0 14px;
+  font-size: 1.4rem;
+  font-weight: 700;
+  line-height: 142.857%;
+  gap: 14px;
+  border-radius: 6px;
+  color: var(--filter-btn-color);
+}
+
+.like-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: var(--like-btn-shadow);
+}
+
+.product-card {
+  border-radius: 20px;
+  background: var(--product-card-bg);
+  box-shadow: var(--product-card-shadow);
+  padding: 16px;
+}
+.product-card__img-wrap {
+  padding-top: 100%;
+  position: relative;
+}
+.product-card__thumb {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.product-card__like-btn {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.product-card__title {
+  margin-top: 16px;
+}
+.product-card__title, .product-card__price, .product-card__score {
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 150%;
+}
+.product-card__brand {
+  color: #9E9DA8;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 146.667%;
+  margin: 16px 0;
+}
+
+.home__container {
+  margin-top: 40px;
+}
+@media (max-width: 767.98px) {
+  .home__container {
+    margin-top: 30px;
+  }
+}
+.home__heading {
+  color: var(--text-color);
+  /* Bold 24 */
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.41;
+}
+.home .cate-item {
+  display: flex;
+  padding: 20px 26px 20px 20px;
+  align-items: flex-start;
+  gap: 20px;
+  border-radius: 16px;
+  background: var(--cate-item-bg);
+  align-items: center;
+}
+.home .cate-item__info {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: flex-start;
+}
+.home .cate-item__thumb {
+  width: 116px;
+  height: 116px;
+  border-radius: 8px;
+  background: var(--cate-item-thumb-bg);
+  object-fit: contain;
+}
+.home .cate-item__title {
+  color: var(--cate-item-title-color);
+  /* Bold 22 */
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: 1.45;
+}
+.home .cate-item__desc {
+  line-height: 1.5;
+  margin-top: 6px;
+}
+.home__cate {
+  --grid-gutter-x: 51px;
+}
+.home__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media (max-width: 1199.98px) {
+  .home .cate-item {
+    flex-direction: column;
+    height: 100%;
+  }
+  .home .cate-item__thumb {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: 150px;
+  }
+}
+@media (max-width: 991.98px) {
+  .home__cate {
+    --grid-gutter-x: 20px;
+  }
+}
+@media (max-width: 767.98px) {
+  .home .cate-item {
+    flex-direction: row;
+  }
+  .home .cate-item__thumb {
+    width: 88px;
+    height: 88px;
+    margin: 0;
+  }
+  .home__cate {
+    --grid-gutter-y: 20px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
