--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -24,6 +24,8 @@ button {
     border: none;
     outline: none;
     background: transparent;
+    padding: 0;
+    cursor: pointer;
 }
 
 a,
@@ -39,4 +41,9 @@ select {
 
 .icon {
     filter: var(--icon-color);
+}
+
+
+html {
+    user-select: none;
 }
