--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -24,4 +24,24 @@ html {
     // Sidebar
     --sidebar-bg: #fff;
     --sidebar-shadow: rgba(200, 200, 200, 0.4);
+
+    // Category item
+    --cate-item-bg: #eee;
+    --cate-item-thumb-bg: #fff;
+    --cate-item-title-color: #000;
+
+    @include abstracts.screen(md) { 
+        --cate-item-bg: #fff;
+    }
+
+    // Filter button
+    --filter-btn-color: #6C6C72;
+    --filter-btn-bg: #fff;
+
+    // Like button
+    --like-btn-shadow: 0px 20px 60px rgba(124, 124, 124, 0.20);
+
+    // Product card
+    --product-card-bg: #fff;
+    --product-card-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.20);
 }
